--- a/package.json
+++ b/package.json
@@ -90,9 +90,11 @@
     "@types/supertest": "2.0.8",
     "@typescript-eslint/eslint-plugin": "2.0.0",
     "@typescript-eslint/parser": "2.0.0",
+    "@typescript-eslint/typescript-estree": "2.0.0",
     "enzyme": "3.10.0",
     "enzyme-adapter-react-16": "1.14.0",
     "eslint": "6.1.0",
+    "eslint-plugin-react": "7.14.3",
     "gulp": "4.0.2",
     "gulp-autoprefixer": "6.1.0",
     "gulp-clean-css": "4.2.0",
