--- a/.eslintrc
+++ b/.eslintrc
@@ -306,6 +306,77 @@
       }
     ],
     "@typescript-eslint/unbound-method": "off",
-    "@typescript-eslint/unified-signatures": "error"
+    "@typescript-eslint/unified-signatures": "error",
+    "react/boolean-prop-naming": "off",
+    "react/button-has-type": "error",
+    "react/default-props-match-prop-types": "error",
+    "react/destructuring-assignment": "error",
+    "react/display-name": "off",
+    "react/forbid-component-props": "off",
+    "react/forbid-dom-props": "off",
+    "react/forbid-elements": "off",
+    "react/forbid-prop-types": "off",
+    "react/forbid-foreign-prop-types": "error",
+    "react/no-access-state-in-setstate": "error",
+    "react/no-array-index-key": "error",
+    "react/no-children-prop": "error",
+    "react/no-danger": "error",
+    "react/no-danger-with-children": "error",
+    "react/no-deprecated": "error",
+    "react/no-did-mount-set-state": "error",
+    "react/no-did-update-set-state": "error",
+    "react/no-direct-mutation-state": "error",
+    "react/no-find-dom-node": "error",
+    "react/no-is-mounted": "error",
+    "react/no-multi-comp": "error",
+    "react/no-redundant-should-component-update": "error",
+    "react/no-render-return-value": "error",
+    "react/no-set-state": "error",
+    "react/no-typos": "error",
+    "react/no-string-refs": "error",
+    "react/no-this-in-sfc": "error",
+    "react/no-unescaped-entities": "error",
+    "react/no-unknown-property": "error",
+    "react/no-unsafe": "error",
+    "react/no-unused-prop-types": "error",
+    "react/no-unused-state": "error",
+    "react/no-will-update-set-state": "error",
+    "react/prefer-es6-clas": [
+      "error",
+      "always"
+    ],
+    "react/prefer-read-only-props": "error",
+    "react/prefer-stateless-function": "error",
+    "react/prop-types": "error",
+    "react/react-in-jsx-scope": "error",
+    "react/require-default-props": "error",
+    "react/require-optimization": "error",
+    "react/require-render-return": "error",
+    "react/self-closing-comp": [
+      "error"
+      {
+        "component": true,
+        "html": true
+      }
+    ],
+    "react/sort-comp": [
+      "error",
+      {
+        "order": [
+          "static-methods",
+          "lifecycle",
+          "everything-else",
+          "render"
+        ]
+      }
+    ],
+    "react/sort-prop-types": "off",
+    "react/state-in-constructor": [
+      "error",
+      "always"
+    ],
+    "react/static-property-placement": "off",
+    "react/style-prop-object": "error",
+    "react/void-dom-elements-no-children": "error"
   }
 }
