--- a/.eslintrc
+++ b/.eslintrc
@@ -175,7 +175,15 @@
     "@typescript-eslint/generic-type-naming": "off",
     "@typescript-eslint/indent": [
       "error",
-      2
+      2,
+      {
+        "SwitchCase": 1,
+        "VariableDeclarator": {
+          "var": 2,
+          "let": 2,
+          "const": 3,
+        }
+      }
     ],
     "@typescript-eslint/interface-name-prefix": "off",
     "@typescript-eslint/member-delimiter-style": [
@@ -331,7 +339,7 @@
     "react/no-multi-comp": "error",
     "react/no-redundant-should-component-update": "error",
     "react/no-render-return-value": "error",
-    "react/no-set-state": "error",
+    "react/no-set-state": "off",
     "react/no-typos": "error",
     "react/no-string-refs": "error",
     "react/no-this-in-sfc": "error",
@@ -410,7 +418,10 @@
     "react/jsx-handler-names": "error",
     "react/jsx-indent": [
       "error",
-      2
+      2,
+      {
+        "indentLogicalExpressions": true
+      }
     ],
     "react/jsx-indent-props": [
       "error",
@@ -424,15 +435,15 @@
         "when": "multiline"
       }
     ],
-    "react/jsx-no-bind": "error",
-    "react/jsx-no-comment-textnodes": "error",
-    "react/jsx-no-duplicate-props": "error",
-    "react/jsx-no-literals": [
+    "react/jsx-no-bind": [
       "error",
       {
-        "noStrings": true
+        "allowArrowFunctions": true
       }
     ],
+    "react/jsx-no-comment-textnodes": "error",
+    "react/jsx-no-duplicate-props": "error",
+    "react/jsx-no-literals": "off",
     "react/jsx-no-target-blank": [
       "error",
       {
