--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "@types/sinon": "7.0.13",
     "@types/superagent": "4.1.3",
     "@types/supertest": "2.0.8",
+    "@types/webpack": "4.39.1",
     "@typescript-eslint/eslint-plugin": "2.3.1",
     "@typescript-eslint/parser": "2.3.1",
     "@typescript-eslint/typescript-estree": "2.3.1",
@@ -111,6 +112,7 @@
     "ts-jest": "24.1.0",
     "ts-loader": "6.1.2",
     "typescript": "3.6.3",
+    "uglifyjs-webpack-plugin": "2.2.0",
     "webpack": "4.41.0",
     "webpack-cli": "3.3.9",
     "webpack-dev-server": "3.8.1",
