--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "supertest": "4.0.2",
     "ts-jest": "24.1.0",
     "ts-loader": "6.2.0",
+    "ts-node": "8.4.1",
     "typescript": "3.6.3",
     "uglifyjs-webpack-plugin": "2.2.0",
     "webpack": "4.41.0",
