--- a/deployment/development/mysql/cnf/my.cnf
+++ b/deployment/development/mysql/cnf/my.cnf
@@ -1,6 +1,11 @@
 [mysqld]
 character-set-server=utf8mb4
+collation-server=utf8mb4_bin
 max_allowed_packet=16MB
 default_authentication_plugin=mysql_native_password
+
 [client]
+default-character-set=utf8mb4
+
+[mysql]
 default-character-set=utf8mb4
