--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "connected-react-router": "6.5.2",
     "express": "4.17.1",
     "express-session": "1.17.0",
-    "handsontable": "7.2.0",
+    "handsontable": "7.2.1",
     "helmet": "3.21.1",
     "history": "4.10.1",
     "http-status": "1.4.0",
@@ -46,7 +46,8 @@
     "react-intl": "3.3.2",
     "react-redux": "7.1.1",
     "react-router-dom": "5.1.2",
-    "recharts": "1.8.0",
+    "recharts": "1.8.1",
+    "redis": "2.8.0",
     "redux": "4.0.4",
     "redux-logger": "3.0.6",
     "redux-saga": "1.1.1",
@@ -71,7 +72,7 @@
     "@types/ioredis": "4.0.18",
     "@types/jest": "24.0.19",
     "@types/mysql": "2.15.7",
-    "@types/node": "12.11.0",
+    "@types/node": "12.11.1",
     "@types/passport": "1.0.1",
     "@types/passport-local": "1.0.33",
     "@types/react": "16.9.7",
@@ -79,6 +80,7 @@
     "@types/react-redux": "7.1.4",
     "@types/react-router-dom": "5.1.0",
     "@types/recharts": "1.1.22",
+    "@types/redis": "2.8.14",
     "@types/redux-logger": "3.0.7",
     "@types/redux-mock-store": "1.0.1",
     "@types/request": "2.48.3",
