--- a/package.json
+++ b/package.json
@@ -111,11 +111,11 @@
     "rimraf": "3.0.0",
     "sinon": "7.5.0",
     "supertest": "4.0.2",
+    "terser-webpack-plugin": "2.2.1",
     "ts-jest": "24.1.0",
     "ts-loader": "6.2.1",
     "ts-node": "8.4.1",
     "typescript": "3.6.4",
-    "uglifyjs-webpack-plugin": "2.2.0",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.9",
     "webpack-dev-server": "3.9.0",
