--- a/.eslintrc
+++ b/.eslintrc
@@ -2,7 +2,7 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "sourceType": "module",
-    "ecmaVersion": 2019,
+    "ecmaVersion": 2020,
     "ecmaFeatures": {
       "jsx": true
     },
@@ -33,6 +33,7 @@
   },
   "rules": {
     "arrow-parens": "error",
+    "brace-style": "off",
     "camelcase": "off",
     "comma-dangle": "error",
     "constructor-super": "error",
@@ -63,6 +64,7 @@
     "no-empty-function": "off",
     "no-eval": "error",
     "no-extra-parens": "off",
+    "no-extra-semi": "off",
     "no-fallthrough": "error",
     "no-invalid-this": "error",
     "no-irregular-whitespace": [
@@ -88,7 +90,7 @@
     "no-trailing-spaces": "error",
     "no-undef-init": "error",
     "no-unsafe-finally": "error",
-    "no-unused-expressions": "error",
+    "no-unused-expressions": "off",
     "no-unused-labels": "error",
     "no-unused-vars": "off",
     "no-useless-constructor": "off",
@@ -103,21 +105,11 @@
     "prefer-const": "error",
     "prefer-object-spread": "error",
     "prefer-template": "error",
-    "quotes": [
-      "error",
-      "single"
-    ],
+    "quotes": "off",
     "radix": "error",
     "require-await": "off",
     "semi": "off",
-    "space-before-function-paren": [
-      "error",
-      {
-        "anonymous": "never",
-        "named": "never",
-        "asyncArrow": "always"
-      }
-    ],
+    "space-before-function-paren": "off",
     "space-in-parens": [
       "error",
       "never"
@@ -140,6 +132,10 @@
     "@typescript-eslint/await-thenable": "error",
     "@typescript-eslint/ban-ts-ignore": "off",
     "@typescript-eslint/ban-types": "error",
+    "@typescript-eslint/brace-style": [
+      "error",
+      "stroustrup"
+    ],
     "@typescript-eslint/camelcase": [
       "error",
       {
@@ -212,6 +208,7 @@
       }
     ],
     "@typescript-eslint/no-array-constructor": "error",
+    "@typescript-eslint/no-dynamic-delete": "error",
     "@typescript-eslint/no-empty-function": [
       "error",
       {
@@ -226,14 +223,16 @@
         "allowSingleExtends": false
       }
     ],
-    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/no-extra-parens": [
       "error",
       "all"
     ],
+    "@typescript-eslint/no-extra-semi": "error",
     "@typescript-eslint/no-extraneous-class": "off",
     "@typescript-eslint/no-floating-promises": "error",
     "@typescript-eslint/no-for-in-array": "error",
+    "@typescript-eslint/no-implied-eval": "error",
     "@typescript-eslint/no-inferrable-types": "off",
     "@typescript-eslint/no-magic-numbers": "off",
     "@typescript-eslint/no-misused-new": "error",
@@ -260,10 +259,13 @@
         "allowDestructuring": true
       }
     ],
+    "@typescript-eslint/no-throw-literal": "error",
     "@typescript-eslint/no-type-alias": "off",
+    "@typescript-eslint/no-unnecessary-condition": "error",
     "@typescript-eslint/no-unnecessary-qualifier": "error",
     "@typescript-eslint/no-unnecessary-type-arguments": "off",
     "@typescript-eslint/no-unnecessary-type-assertion": "error",
+    "@typescript-eslint/no-unused-expressions": "error",
     "@typescript-eslint/no-unused-vars": [
       "error",
       {
@@ -272,6 +274,7 @@
         "ignoreRestSiblings": true
       }
     ],
+    "@typescript-eslint/no-unused-vars-experimental": "off",
     "@typescript-eslint/no-use-before-define": "error",
     "@typescript-eslint/no-useless-constructor": "error",
     "@typescript-eslint/no-var-requires": "error",
@@ -279,14 +282,27 @@
     "@typescript-eslint/prefer-function-type": "off",
     "@typescript-eslint/prefer-includes": "error",
     "@typescript-eslint/prefer-namespace-keyword": "off",
+    "@typescript-eslint/prefer-nullish-coalescing": "error",
+    "@typescript-eslint/prefer-optional-chain": "error",
     "@typescript-eslint/prefer-readonly": "off",
     "@typescript-eslint/prefer-regexp-exec": "error",
     "@typescript-eslint/prefer-string-starts-ends-with": "error",
     "@typescript-eslint/promise-function-async": "off",
+    "@typescript-eslint/quotes": ["error", "single"],
     "@typescript-eslint/require-array-sort-compare": "error",
     "@typescript-eslint/require-await": "error",
     "@typescript-eslint/restrict-plus-operands": "error",
+    "@typescript-eslint/restrict-template-expressions": "error",
+    "@typescript-eslint/return-await": "error",
     "@typescript-eslint/semi": "error",
+    "@typescript-eslint/space-before-function-paren": [
+      "error",
+      {
+        "anonymous": "never",
+        "named": "never",
+        "asyncArrow": "always"
+      }
+    ],
     "@typescript-eslint/strict-boolean-expressions": "error",
     "@typescript-eslint/triple-slash-reference": "off",
     "@typescript-eslint/type-annotation-spacing": [
