--- a/package.json
+++ b/package.json
@@ -60,43 +60,38 @@
   },
   "devDependencies": {
     "@types/bcrypt": "3.0.0",
-    "@types/chance": "1.0.7",
+    "@types/chance": "1.0.8",
     "@types/check-types": "7.3.1",
     "@types/compression": "1.0.1",
     "@types/config": "0.0.36",
     "@types/connect-redis": "0.0.13",
-    "@types/enzyme": "3.10.3",
-    "@types/enzyme-adapter-react-16": "1.0.5",
     "@types/express": "4.17.1",
     "@types/express-session": "1.15.15",
     "@types/helmet": "0.0.45",
     "@types/history": "4.7.3",
-    "@types/ioredis": "4.14.1",
-    "@types/jest": "24.0.23",
+    "@types/ioredis": "4.14.3",
+    "@types/jest": "24.0.25",
     "@types/mysql": "2.15.8",
-    "@types/node": "12.12.14",
+    "@types/node": "13.1.5",
     "@types/passport": "1.0.2",
     "@types/passport-local": "1.0.33",
-    "@types/react": "16.9.15",
+    "@types/react": "16.9.17",
     "@types/react-dom": "16.9.4",
     "@types/react-redux": "7.1.5",
     "@types/react-router-dom": "5.1.3",
-    "@types/recharts": "1.8.3",
+    "@types/recharts": "1.8.4",
     "@types/redis": "2.8.14",
     "@types/redux-logger": "3.0.7",
-    "@types/redux-mock-store": "1.0.1",
-    "@types/request": "2.48.3",
+    "@types/request": "2.48.4",
     "@types/serve-favicon": "2.5.0",
     "@types/sinon": "7.5.1",
     "@types/superagent": "4.1.4",
     "@types/supertest": "2.0.8",
-    "@types/webpack": "4.41.0",
-    "@typescript-eslint/eslint-plugin": "2.10.0",
-    "@typescript-eslint/parser": "2.10.0",
-    "@typescript-eslint/typescript-estree": "2.10.0",
-    "enzyme": "3.10.0",
-    "enzyme-adapter-react-16": "1.15.1",
-    "eslint": "6.7.2",
+    "@types/webpack": "4.41.2",
+    "@typescript-eslint/eslint-plugin": "2.15.0",
+    "@typescript-eslint/parser": "2.15.0",
+    "@typescript-eslint/typescript-estree": "2.15.0",
+    "eslint": "6.8.0",
     "eslint-plugin-react": "7.17.0",
     "gulp": "4.0.2",
     "gulp-autoprefixer": "7.0.1",
@@ -104,21 +99,19 @@
     "gulp-nodemon": "2.4.2",
     "gulp-plumber": "1.2.1",
     "gulp-sass": "4.0.2",
-    "gulp-typescript": "5.0.1",
+    "gulp-typescript": "6.0.0-alpha.1",
     "jest": "24.9.0",
-    "react-test-renderer": "16.11.0",
-    "redux-mock-store": "1.5.3",
     "rimraf": "3.0.0",
-    "sinon": "7.5.0",
+    "sinon": "8.0.4",
     "supertest": "4.0.2",
-    "terser-webpack-plugin": "2.2.1",
-    "ts-jest": "24.2.0",
+    "terser-webpack-plugin": "2.3.2",
+    "ts-jest": "24.3.0",
     "ts-loader": "6.2.1",
     "ts-node": "8.5.4",
-    "typescript": "3.7.3",
-    "webpack": "4.41.2",
+    "typescript": "3.7.4",
+    "webpack": "4.41.5",
     "webpack-cli": "3.3.10",
-    "webpack-dev-server": "3.9.0",
+    "webpack-dev-server": "3.10.1",
     "webpack-stream": "5.2.1"
   },
   "jest": {
