--- a/package.json
+++ b/package.json
@@ -16,47 +16,47 @@
     "lint": "eslint 'src/**/*.ts{,x}' --fix"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "5.11.2",
-    "@handsontable/react": "3.1.1",
-    "@material-ui/core": "4.7.1",
+    "@fortawesome/fontawesome-free": "5.12.0",
+    "@handsontable/react": "3.1.2",
+    "@material-ui/core": "4.8.3",
     "bcrypt": "3.0.7",
     "bourbon-neat": "4.0.0",
     "chance": "1.1.4",
-    "check-types": "11.0.0",
+    "check-types": "11.1.1",
     "compression": "1.7.4",
     "config": "3.2.4",
     "connect-redis": "4.0.3",
-    "connected-react-router": "6.5.2",
+    "connected-react-router": "6.6.1",
     "express": "4.17.1",
     "express-session": "1.17.0",
-    "handsontable": "7.2.2",
+    "handsontable": "7.3.0",
     "helmet": "3.21.2",
     "history": "4.10.1",
-    "http-status": "1.4.0",
+    "http-status": "1.4.2",
     "inversify": "5.0.1",
     "ioredis": "4.14.1",
     "js-yaml": "3.13.1",
     "log4js": "6.1.0",
     "moment": "2.24.0",
     "mysql": "2.17.1",
-    "passport": "0.4.0",
+    "passport": "0.4.1",
     "passport-local": "1.0.0",
     "pug": "2.0.4",
-    "react": "16.11.0",
-    "react-dom": "16.11.0",
-    "react-intl": "3.4.0",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "react-intl": "3.11.0",
     "react-redux": "7.1.3",
     "react-router-dom": "5.1.2",
-    "recharts": "1.8.5",
+    "recharts": "2.0.0-beta.1",
     "redis": "2.8.0",
-    "redux": "4.0.4",
+    "redux": "4.0.5",
     "redux-logger": "3.0.6",
     "redux-saga": "1.1.3",
     "reflect-metadata": "0.1.13",
     "request": "2.88.0",
     "serve-favicon": "2.5.0",
     "source-map-support": "0.5.16",
-    "superagent": "5.1.2"
+    "superagent": "5.2.1"
   },
   "devDependencies": {
     "@types/bcrypt": "3.0.0",
