--- a/package.json
+++ b/package.json
@@ -75,7 +75,7 @@
     "@types/passport": "1.0.2",
     "@types/passport-local": "1.0.33",
     "@types/react": "16.9.17",
-    "@types/react-dom": "16.9.4",
+    "@types/react-dom": "^16.9.5",
     "@types/react-redux": "7.1.6",
     "@types/react-router-dom": "5.1.3",
     "@types/recharts": "1.8.5",
@@ -86,9 +86,9 @@
     "@types/superagent": "4.1.4",
     "@types/supertest": "2.0.8",
     "@types/webpack": "4.41.2",
-    "@typescript-eslint/eslint-plugin": "2.16.0",
-    "@typescript-eslint/parser": "2.16.0",
-    "@typescript-eslint/typescript-estree": "2.16.0",
+    "@typescript-eslint/eslint-plugin": "2.17.0",
+    "@typescript-eslint/parser": "2.17.0",
+    "@typescript-eslint/typescript-estree": "2.17.0",
     "eslint": "6.8.0",
     "eslint-plugin-react": "7.18.0",
     "gulp": "4.0.2",
