--- a/.eslintrc
+++ b/.eslintrc
@@ -86,7 +86,7 @@
     "no-shadow": "error",
     "no-sparse-arrays": "error",
     "no-template-curly-in-string": "error",
-    "no-throw-literal": "error",
+    "no-throw-literal": "off",
     "no-trailing-spaces": "error",
     "no-undef-init": "error",
     "no-unsafe-finally": "error",
