--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "@types/compression": "1.7.0",
     "@types/config": "0.0.36",
     "@types/connect-redis": "0.0.13",
-    "@types/express": "4.17.3",
+    "@types/express": "4.17.4",
     "@types/express-session": "1.17.0",
     "@types/helmet": "0.0.45",
     "@types/history": "4.7.5",
@@ -73,14 +73,14 @@
     "@types/node": "13.9.8",
     "@types/passport": "1.0.3",
     "@types/passport-local": "1.0.33",
-    "@types/react": "16.9.29",
-    "@types/react-dom": "^16.9.5",
+    "@types/react": "16.9.31",
+    "@types/react-dom": "16.9.6",
     "@types/react-redux": "7.1.7",
     "@types/react-router-dom": "5.1.3",
     "@types/recharts": "1.8.9",
     "@types/redux-logger": "3.0.7",
     "@types/serve-favicon": "2.5.0",
-    "@types/sinon": "7.5.2",
+    "@types/sinon": "9.0.0",
     "@types/superagent": "4.1.7",
     "@types/supertest": "2.0.8",
     "@types/webpack": "4.41.10",
