--- a/.eslintrc
+++ b/.eslintrc
@@ -329,7 +329,7 @@
         "arrayDestructuring": true,
         "arrowParameter": true,
         "memberVariableDeclaration": true,
-        "objectDestructuring": true,
+        "objectDestructuring": false,
         "parameter": true,
         "propertyDeclaration": true,
         "variableDeclaration": true,
