--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "recharts": "2.0.0-beta.3",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
+    "redux-observable": "1.2.0",
     "redux-saga": "1.1.3",
     "reflect-metadata": "0.1.13",
+    "rxjs": "6.5.5",
     "serve-favicon": "2.5.0",
     "source-map-support": "0.5.16",
     "superagent": "5.2.2"
