--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "gulp build",
     "gulp:watch": "gulp",
     "webpack:watch": "webpack-dev-server --hot --config webpack.dev.config.js",
-    "start": "pm2-runtime start pm2.config.js",
-    "stop": "pm2-runtime stop pm2.config.js",
+    "start": "pm2-runtime start pm2.yml",
+    "stop": "pm2-runtime stop pm2.yml",
     "test": "jest test --detectOpenHandles --coverage",
     "lint": "eslint 'src/**/*.ts{,x}' --fix",
     "update": "ncu -u"
@@ -102,6 +102,7 @@
     "gulp-typescript": "6.0.0-alpha.1",
     "jest": "25.3.0",
     "npm-check-updates": "4.1.2",
+    "pm2": "4.2.3",
     "rimraf": "3.0.2",
     "sinon": "9.0.2",
     "supertest": "4.0.2",
