--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "repository": "git@gitlab.com:jamashita/veau.git",
   "author": "jamashita <jamashita@arachnid.xyz>",
   "license": "MIT",
-  "private": false,
+  "private": true,
   "scripts": {
     "build": "gulp build",
     "gulp:watch": "gulp",
