--- a/deployment/staging/mysql/cnf/my.cnf
+++ b/deployment/staging/mysql/cnf/my.cnf
@@ -1,8 +1,26 @@
 [mysqld]
+server-id=1
 character-set-server=utf8mb4
 collation-server=utf8mb4_bin
 max_allowed_packet=16MB
 default_authentication_plugin=mysql_native_password
+
+# Timezone
+default-time-zone=SYSTEM
+log_timestamps=SYSTEM
+
+# Error Log
+log-error=/var/log/mysql/error.log
+
+# Slow Query Log
+slow_query_log=1
+slow_query_log_file=/var/log/mysql/slow.log
+long_query_time=5.0
+log_queries_not_using_indexes=0
+
+# General Log
+general_log=1
+general_log_file=/var/log/mysql/general.log
 
 [client]
 default-character-set=utf8mb4
