--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "log4js": "6.2.0",
     "make-error-cause": "2.3.0",
     "mysql": "2.18.1",
+    "object-hash": "2.0.3",
     "passport": "0.4.1",
     "passport-local": "1.0.0",
     "pug": "2.0.4",
@@ -80,6 +81,7 @@
     "@types/jest": "25.2.1",
     "@types/mysql": "2.15.10",
     "@types/node": "13.13.0",
+    "@types/object-hash": "1.3.1",
     "@types/passport": "1.0.3",
     "@types/passport-local": "1.0.33",
     "@types/react": "16.9.34",
