--- a/package.json
+++ b/package.json
@@ -26,29 +26,29 @@
     "watch:webpack": "webpack-dev-server --hot --config webpack.development.config.js"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "1.2.32",
-    "@fortawesome/free-solid-svg-icons": "5.15.1",
+    "@fortawesome/fontawesome-svg-core": "1.2.34",
+    "@fortawesome/free-solid-svg-icons": "5.15.2",
     "@handsontable/react": "4.0.0",
-    "@jamashita/publikum-ajax": "3.4.0",
-    "@jamashita/publikum-cache": "3.4.0",
-    "@jamashita/publikum-collection": "3.4.0",
-    "@jamashita/publikum-digest": "3.4.0",
-    "@jamashita/publikum-error": "3.4.0",
-    "@jamashita/publikum-interface": "3.4.0",
-    "@jamashita/publikum-json": "3.4.0",
-    "@jamashita/publikum-monad": "3.4.0",
-    "@jamashita/publikum-mysql": "3.4.0",
-    "@jamashita/publikum-object": "3.4.0",
-    "@jamashita/publikum-random": "3.4.0",
-    "@jamashita/publikum-redis": "3.4.0",
-    "@jamashita/publikum-type": "3.4.0",
-    "@jamashita/publikum-uuid": "3.4.0",
-    "@jamashita/publikum-validation": "3.4.0",
-    "@jamashita/publikum-zeit": "3.4.0",
+    "@jamashita/publikum-ajax": "3.11.0",
+    "@jamashita/publikum-cache": "3.11.0",
+    "@jamashita/publikum-collection": "3.11.0",
+    "@jamashita/publikum-digest": "3.11.0",
+    "@jamashita/publikum-error": "3.11.0",
+    "@jamashita/publikum-interface": "3.11.0",
+    "@jamashita/publikum-json": "3.11.0",
+    "@jamashita/publikum-monad": "3.11.0",
+    "@jamashita/publikum-mysql": "3.11.0",
+    "@jamashita/publikum-object": "3.11.0",
+    "@jamashita/publikum-random": "3.11.0",
+    "@jamashita/publikum-redis": "3.11.0",
+    "@jamashita/publikum-type": "3.11.0",
+    "@jamashita/publikum-uuid": "3.11.0",
+    "@jamashita/publikum-validation": "3.11.0",
+    "@jamashita/publikum-zeit": "3.11.0",
     "@material-ui/core": "4.11.2",
     "bourbon-neat": "4.0.0",
-    "class-transformer": "0.3.1",
-    "class-validator": "0.12.2",
+    "class-transformer": "0.3.2",
+    "class-validator": "0.13.1",
     "compression": "1.7.4",
     "config": "3.3.3",
     "connect-redis": "5.0.0",
@@ -56,21 +56,21 @@
     "express": "4.17.1",
     "express-session": "1.17.1",
     "handsontable": "8.2.0",
-    "helmet": "4.2.0",
+    "helmet": "4.4.1",
     "history": "5.0.0",
     "http-status-codes": "2.1.4",
-    "inversify": "5.0.1",
-    "js-yaml": "3.14.0",
+    "inversify": "5.0.5",
+    "js-yaml": "4.0.0",
     "passport": "0.4.1",
     "passport-local": "1.0.0",
-    "pm2": "4.5.0",
+    "pm2": "4.5.1",
     "pug": "3.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-intl": "5.10.6",
+    "react-intl": "5.10.16",
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
-    "recharts": "2.0.0-beta.3",
+    "recharts": "2.0.3",
     "redux": "4.0.5",
     "redux-logger": "3.0.6",
     "redux-observable": "1.2.0",
@@ -78,61 +78,61 @@
     "routing-controllers": "0.9.0-alpha.6",
     "rxjs": "6.6.3",
     "serve-favicon": "2.5.0",
-    "tslog": "3.0.1"
+    "tslog": "3.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "11.0.0",
     "@commitlint/config-conventional": "11.0.0",
-    "@jamashita/eslint-config": "1.11.0",
+    "@jamashita/eslint-config": "1.23.1",
     "@types/compression": "1.7.0",
-    "@types/config": "0.0.37",
-    "@types/connect-redis": "0.0.15",
-    "@types/express": "4.17.9",
+    "@types/config": "0.0.38",
+    "@types/connect-redis": "0.0.16",
+    "@types/express": "4.17.11",
     "@types/express-session": "1.17.3",
     "@types/helmet": "0.0.48",
     "@types/history": "4.7.8",
-    "@types/jest": "26.0.16",
-    "@types/node": "14.14.10",
-    "@types/passport": "1.0.4",
+    "@types/jest": "26.0.20",
+    "@types/node": "14.14.22",
+    "@types/passport": "1.0.5",
     "@types/passport-local": "1.0.33",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
-    "@types/react-redux": "7.1.11",
-    "@types/react-router-dom": "5.1.6",
-    "@types/recharts": "1.8.17",
+    "@types/react-redux": "7.1.16",
+    "@types/react-router-dom": "5.1.7",
+    "@types/recharts": "1.8.19",
     "@types/redux-logger": "3.0.8",
     "@types/serve-favicon": "2.5.2",
-    "@types/sinon": "9.0.9",
+    "@types/sinon": "9.0.10",
     "@types/supertest": "2.0.10",
-    "@types/webpack": "4.41.25",
-    "@typescript-eslint/eslint-plugin": "4.9.0",
-    "@typescript-eslint/parser": "4.9.0",
-    "@typescript-eslint/typescript-estree": "4.9.0",
+    "@types/webpack": "4.41.26",
+    "@typescript-eslint/eslint-plugin": "4.14.0",
+    "@typescript-eslint/parser": "4.14.0",
+    "@typescript-eslint/typescript-estree": "4.14.0",
     "concurrently": "5.3.0",
-    "eslint": "7.15.0",
+    "eslint": "7.18.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jest": "24.1.3",
     "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-react": "7.21.5",
+    "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "font-config-webpack-plugin": "2.0.0",
-    "git-cz": "4.7.5",
-    "husky": "4.3.4",
+    "git-cz": "4.7.6",
+    "husky": "4.3.8",
     "jest": "26.6.3",
     "lint-staged": "10.5.3",
-    "npm-check-updates": "10.2.2",
+    "npm-check-updates": "11.0.2",
     "rimraf": "3.0.2",
     "scss-config-webpack-plugin": "2.0.0",
-    "sinon": "9.2.1",
-    "sort-package-json": "1.48.0",
+    "sinon": "9.2.4",
+    "sort-package-json": "1.48.1",
     "supertest": "6.0.1",
     "ts-config-webpack-plugin": "2.0.0",
     "ts-jest": "26.4.4",
-    "ts-node-dev": "1.0.0",
-    "typescript": "4.1.2",
-    "webpack": "5.10.0",
-    "webpack-cli": "4.2.0",
-    "webpack-dev-server": "3.11.0",
+    "ts-node-dev": "1.1.1",
+    "typescript": "4.1.3",
+    "webpack": "5.17.0",
+    "webpack-cli": "4.4.0",
+    "webpack-dev-server": "3.11.2",
     "webpack-stream": "6.1.1"
   },
   "engines": {
