--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,4 +1,4 @@
 {
-  "src/**/*.{ts,tsx}": "eslint --fix --quiet",
+  "packages/*/src/**/*.{ts,tsx}": "eslint --fix --quiet",
   "package.json": "sort-package-json"
 }
