--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "build:esm": "webpack",
     "clean": "rimraf dist && rimraf coverage",
     "commit": "git cz",
-    "format": "eslint --fix 'src/**/*.{ts,tsx}'",
+    "format": "eslint --fix 'packages/*/src/**/*.{ts,tsx}'",
     "start": "pm2-runtime start pm2.yml",
     "stop": "pm2-runtime stop pm2.yml",
     "test": "jest test",
     "update": "yarn update:upgrade && yarn update:install",
-    "update:install": "yarn install && yarn upgrade",
-    "update:upgrade": "ncu --upgrade",
+    "update:install": "yarn install && yarn upgrade && yarn audit fix --force",
+    "update:upgrade": "ncu --packageManager yarn --upgrade",
     "watch": "concurrently 'npm:watch:*'",
     "watch:server": "NODE_ENV=development ts-node-dev --respawn --transpile-only src/Server/Server.ts",
     "watch:webpack": "webpack-dev-server --hot --config webpack.development.config.js"
@@ -29,22 +29,22 @@
     "@fortawesome/fontawesome-svg-core": "1.2.35",
     "@fortawesome/free-solid-svg-icons": "5.15.3",
     "@handsontable/react": "5.0.0",
-    "@jamashita/publikum-ajax": "3.11.0",
-    "@jamashita/publikum-cache": "3.11.0",
-    "@jamashita/publikum-collection": "3.11.0",
-    "@jamashita/publikum-digest": "3.11.0",
-    "@jamashita/publikum-error": "3.11.0",
-    "@jamashita/publikum-interface": "3.11.0",
-    "@jamashita/publikum-json": "3.11.0",
-    "@jamashita/publikum-monad": "3.11.0",
-    "@jamashita/publikum-mysql": "3.11.0",
-    "@jamashita/publikum-object": "3.11.0",
-    "@jamashita/publikum-random": "3.11.0",
-    "@jamashita/publikum-redis": "3.11.0",
-    "@jamashita/publikum-type": "3.11.0",
-    "@jamashita/publikum-uuid": "3.11.0",
-    "@jamashita/publikum-validation": "3.11.0",
-    "@jamashita/publikum-zeit": "3.11.0",
+    "@jamashita/publikum-ajax": "3.12.0",
+    "@jamashita/publikum-cache": "3.12.0",
+    "@jamashita/publikum-collection": "3.12.0",
+    "@jamashita/publikum-digest": "3.12.0",
+    "@jamashita/publikum-error": "3.12.0",
+    "@jamashita/publikum-interface": "3.12.0",
+    "@jamashita/publikum-json": "3.12.0",
+    "@jamashita/publikum-monad": "3.12.0",
+    "@jamashita/publikum-mysql": "3.12.0",
+    "@jamashita/publikum-object": "3.12.0",
+    "@jamashita/publikum-random": "3.12.0",
+    "@jamashita/publikum-redis": "3.12.0",
+    "@jamashita/publikum-type": "3.12.0",
+    "@jamashita/publikum-uuid": "3.12.0",
+    "@jamashita/publikum-validation": "3.12.0",
+    "@jamashita/publikum-zeit": "3.12.0",
     "@material-ui/core": "4.11.3",
     "bourbon-neat": "4.0.0",
     "class-transformer": "0.4.0",
@@ -83,13 +83,13 @@
   "devDependencies": {
     "@commitlint/cli": "12.1.1",
     "@commitlint/config-conventional": "12.1.1",
-    "@jamashita/eslint-config": "1.33.0",
+    "@jamashita/eslint-plugin": "1.41.0",
     "@types/compression": "1.7.0",
     "@types/config": "0.0.38",
     "@types/connect-redis": "0.0.16",
     "@types/express": "4.17.11",
     "@types/express-session": "1.17.3",
-    "@types/helmet": "0.0.48",
+    "@types/helmet": "4.0.0",
     "@types/history": "4.7.8",
     "@types/jest": "26.0.22",
     "@types/node": "14.14.41",
@@ -110,12 +110,6 @@
     "@typescript-eslint/typescript-estree": "4.22.0",
     "concurrently": "6.0.2",
     "eslint": "7.24.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jest": "24.3.5",
-    "eslint-plugin-jsx-a11y": "6.4.1",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-react": "7.23.2",
-    "eslint-plugin-react-hooks": "4.2.0",
     "font-config-webpack-plugin": "2.0.2",
     "git-cz": "4.7.6",
     "husky": "6.0.0",
