--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build:esm": "webpack",
     "clean": "rimraf dist && rimraf coverage",
     "commit": "git cz",
-    "format": "eslint --fix 'packages/*/src/**/*.{ts,tsx}'",
+    "format": "eslint --fix 'src/**/*.{ts,tsx}'",
     "start": "pm2-runtime start pm2.yml",
     "stop": "pm2-runtime stop pm2.yml",
     "test": "jest test",
