--- a/package.json
+++ b/package.json
@@ -38,18 +38,17 @@
     "@jamashita/catacombe-heap": "1.0.0",
     "@jamashita/catacombe-mysql": "1.0.0",
     "@jamashita/catacombe-redis": "1.0.0",
-    "@jamashita/genitore-superposition": "1.5.0",
-    "@jamashita/genitore-unscharferelation": "1.6.0",
+    "@jamashita/genitore": "1.4.0",
     "@jamashita/lluvia-collection": "1.3.0",
     "@jamashita/steckdose-digest": "1.1.0",
     "@jamashita/steckdose-json": "1.1.0",
-    "@material-ui/core": "4.11.3",
+    "@material-ui/core": "4.11.4",
     "bourbon-neat": "4.0.0",
     "class-transformer": "0.4.0",
     "class-validator": "0.13.1",
     "compression": "1.7.4",
     "config": "3.3.6",
-    "connect-redis": "5.1.0",
+    "connect-redis": "5.2.0",
     "connected-react-router": "6.9.1",
     "express": "4.17.1",
     "express-session": "1.17.1",
@@ -90,7 +89,7 @@
     "@types/helmet": "4.0.0",
     "@types/history": "4.7.8",
     "@types/jest": "26.0.23",
-    "@types/node": "15.0.0",
+    "@types/node": "15.0.1",
     "@types/passport": "1.0.6",
     "@types/passport-local": "1.0.33",
     "@types/react": "17.0.4",
@@ -113,7 +112,7 @@
     "husky": "6.0.0",
     "jest": "26.6.3",
     "lint-staged": "10.5.4",
-    "npm-check-updates": "11.5.3",
+    "npm-check-updates": "11.5.4",
     "rimraf": "3.0.2",
     "scss-config-webpack-plugin": "2.0.2",
     "sinon": "10.0.0",
